[CHANGE] Lowest iOS version supported is now 10.